<resources>
    <string name="app_name" translatable="false">My Application</string>
    <string name="ax_b_0" translatable="false"><![CDATA[ax + b < 0]]></string>
    <string name="enter_b" translatable="false">Enter: b</string>
    <string name="enter_a" translatable="false">Enter: a</string>
    <string name="b_incorrectly" translatable="false">Variable b is entered incorrectly</string>
    <string name="a_incorrectly" translatable="false">Variable a is entered incorrectly</string>
    <string name="result" translatable="false">Result:</string>
    <string name="button_result" translatable="false">Result</string>
    <string name="there_is_one_decision" translatable="false">There is one decision</string>
    <string name="x_belongs_to_everything" translatable="false">x ∈ R</string>
    <string name="MAX_VALUE_for_a" translatable="false">You entered too large a value for the variable a</string>
    <string name="MIN_VALUE_for_a" translatable="false">You entered too small a value for the variable a</string>
    <string name="MAX_VALUE_for_b" translatable="false">You entered too large a value for the variable b</string>
    <string name="MIN_VALUE_for_b" translatable="false">You entered too small a value for the variable b</string>
    <string name="buttonToShare" translatable="false">To Share</string>
    <string name="solution_of_a_linear_equation_of_the_form" translatable="false">Solution of a linear equation of the form</string>
</resources>